--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -21,6 +21,10 @@ h1, h2, h3, h4, h5, h6 {
     display: none;
 }
 
+#header a.external {
+    background: none;
+}
+
 .langswitcher {
     position: static !important;
     transform: translateY(0%) !important;
